--- a/Langchain.ipynb
+++ b/Langchain.ipynb
@@ -8,7 +8,7 @@
       },
       "outputs": [],
       "source": [
-        "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"
+        "pass"
       ]
     },
     {
